# MiniClaw

./: .gitignore  ARCHITECTURE.md  CC.md  CLAUDE.md  PLUGCTX_SPEC.md  TODO.md  ZEROCLAW.md  agent.py  cc_main.py  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  ui.py
channels/: __init__.py  base.py  cli.py  feishu.py
docs/deploy/: remote.md
docs/dev/: ARCHITECTURE.md  REMOTE.md
memory/: __init__.py  base.py  json_memory.py
miniclaw/: __init__.py  activity.py  agent.py  cancellation.py  cc_main.py  config.py  diag_cache.py  gateway.py  interactions.py  log.py  main.py  persistence.py  quota.py  runtime.py  runtime_context.py  session.py  statusline.py  subagent_driver.py  types.py  ui.py  usage.py
miniclaw.backup/: activity.py  agent.py  gateway.py  session.py
miniclaw.backup/ccagent/: __init__.py
miniclaw.backup/channels/: base.py  cli.py  commands.py  feishu.py
miniclaw.backup/memory/: __init__.py
miniclaw.backup/providers/: __init__.py  anthropic_provider.py  base.py
miniclaw.backup/subagent/: executor.py  tracker.py
miniclaw.backup/tools/: __init__.py  base.py  git_tool.py  grep_tool.py  memory_tool.py
miniclaw/agent/: __init__.py  cc.py  cc_session_reader.py  cc_tmux.py  cc_tmux_parser.py  config.py  native.py  protocol.py
miniclaw/ccagent/: __init__.py  agent.py
miniclaw/channels/: __init__.py  base.py  cli.py  commands.py  feishu.py  pipe.py
miniclaw/listeners/: __init__.py  base.py  (+4 more)
miniclaw2/: __init__.py  cc_main.py  main.py  runtime.py  session.py  types.py
providers/: __init__.py  anthropic_provider.py  openai_provider.py
tests/: 01_session_core.md  02_session_interrupt.md  03_session_observers.md  04_session_fork.md  05_agent_protocol_events.md  06_native_agent.md  07_ccagent.md  08_cli_channel.md  09_cli_listener.md  10_feishu_channel.md  11_pipe_system.md  12_runtime.md  13_persistence.md  14_cancellation_token.md  15_channel_abc.md  16_agent_config.md  17_plugctx.md  basic.md  cc_cache_proxy.py  cc_cache_replay.py
tools/: __init__.py  base.py  file_edit.py  file_read.py  file_write.py  git_tool.py  memory_tool.py  shell.py
(+46 files in other folders)
