[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaw"
version = "0.1.0"
description = "Minimal Python agent runtime connecting LLM providers to messaging channels"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "lark-oapi>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "claude-agent-sdk>=0.1.40",
    "aiohttp>=3.9",
]

[project.scripts]
miniclaw = "miniclaw.main:main"
minicode = "miniclaw.cc_main:main"

[tool.setuptools]
packages = [
    "miniclaw",
    "miniclaw.agent",
    "miniclaw.channels",
    "miniclaw.listeners",
    "miniclaw.providers",
    "miniclaw.remote",
    "miniclaw.tools",
]
